# Adaptive-Monte-Carlo-Localization

./: .gitignore  README.md
ball_chaser/: CMakeLists.txt  package.xml
ball_chaser/launch/: ball_chaser.launch
ball_chaser/src/: drive_bot.cpp  process_image.cpp
ball_chaser/srv/: DriveToTarget.srv
ball_chaser2/: CMakeLists.txt
my_robot/: CMakeLists.txt  package.xml
my_robot/launch/: robot_description.xml  world.launch
my_robot/urdf/: my_robot.gazebo  my_robot.xacro
my_robot/worlds/: my_sexy_world  my_sexy_world.world
pgm_map_creator/launch/: request_publisher.launch
pgm_map_creator_1/world/: my_sexy_world.world
where_am_i/: CMakeLists.txt  package.xml
where_am_i/config/: costmap_common_params.yaml  global_costmap_params.yaml
where_am_i/launch/: amcl.launch
where_am_i/maps/: map.yaml
